Fix user options dropdown being too wide

--- a/app/assets/stylesheets/main_components/_user-actions-menu.scss
+++ b/app/assets/stylesheets/main_components/_user-actions-menu.scss
@@ -5,6 +5,7 @@
 
   box-sizing: border-box;
   min-width: (300 / 16 * 1rem);
+  max-width: (300 / 16 * 1rem);
 
   background: #fff;
   box-shadow: 0 5px 18px rgba(0, 0, 0, .4);
